samples/_failures_safe/1761179244_7e1f25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d51835d.c: In function ‘main’:
./samples/SAFE/__tmp_6d51835d.c:109:5: error: expected expression at end of input
  109 |     if (input_size == 0 || input_size > MAX_INPUT_SIZE)
      |     ^~
./samples/SAFE/__tmp_6d51835d.c:109:5: error: expected declaration or statement at end of input
